simpler watch implementation

--- a/demo/index.html
+++ b/demo/index.html
@@ -48,7 +48,9 @@
       this.unmountBtn.addEventListener('click', () => this.inception.unmount());
 
       this.watch(todos).then({
-        add: () => {},
+        add: () => {
+          
+        },
         move: () => {},
         remove: () => {},
       });
